--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 </head>
 <body>
 
+
+
+
 <div class="jumbotron">
   <div class="container text-center">
         <img class="heroCarousel-image" src="http://cdn6.bigcommerce.com/s-efzfxrs/product_images/theme_images/cornerstonewarm2__43666.jpg?t=1464819462" alt="" title="">
@@ -37,7 +40,7 @@
   </div>
 </div>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" style="background-color:#ffffff;">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
